Created new project "UserRegistration" which is a website in backend.

--- a/Amazon/Amazon.csproj
+++ b/Amazon/Amazon.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+    <ProjectReference Include="..\UserRegistration\UserRegistration.csproj" />
   </ItemGroup>
 
 </Project>
